common: Fix language chooser check marks being cleared

https://bugzilla.gnome.org/show_bug.cgi?id=695536