panels/common/cc-language-chooser.c
@@ -79,8 +79,6 @@ set_locale_id (GtkDialog *chooser,
                                 egg_list_box_refilter (EGG_LIST_BOX (priv->language_list));
                         }
                 } else {
-                        gtk_image_clear (GTK_IMAGE (check));
-                        g_object_set (check, "icon-size", GTK_ICON_SIZE_MENU, NULL);
                         gtk_widget_hide (check);
                 }
         }
